#104 - fix heading too big

--- a/newsgrid/css/mobile.css
+++ b/newsgrid/css/mobile.css
@@ -52,4 +52,8 @@
   .page-container > *:first-child {
     grid-row: 1;
   }
+
+  .l-heading {
+    font-size: 2rem;
+  }
 }
